@@ -1,6 +1,7 @@
 Revision history for Plack-Middleware-CrossOrigin
 
 {{$NEXT}}
+ - Suppress warnings when checking for buggy WebKit browsers. (Dave Rolsky)
 
 0.008     Jan 29 2013
  - Updated browser support documentation.
